# bind-rest-api

./: .coveragerc  .gitignore  .pylintrc  Makefile  README.md  apikeys_example.pass  bindapi.py  example_apikeys.pass  example_config.env  pyproject.toml
acme.sh_dns_api_tool/: dns_bindrestapi.sh
bind_rest_api/: cli.py  password.py
bind_rest_api/api/: api.py  constants.py
bindapi/: __init__.py  api.py  main.py
bindapi/api/: api.py
container/: Dockerfile
systemd/: bind-rest-api.service  runapi.bash  runapi.fish
tests/: test_cli.py
