[tool.poetry]
name = "bind-rest-api"
version = "1.2.0"
description = "Rest API for Bind9 built with FastAPI"
authors = ["Jay Tuckey <jay.tuckey@cdu.edu.au>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6"
dnspython = "^2.1.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
coverage = "^5.5"
pytest = "^6.2.5"
python-semantic-release = "^7.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bindapi = 'bind_rest_api.cli:main'

[tool.semantic_release]
version_variable = [
    "bind_rest_api/api/constants.py:__version__",
    "pyproject.toml:version"
    ]
