[tool.poetry]
name = "bind-rest-api"
version = "1.3.0"
description = "Rest API for Bind9 built with FastAPI"
authors = ["Jay Tuckey <jay.tuckey@cdu.edu.au>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6.3"
dnspython = "^2.2.0"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.5"
python-semantic-release = "^7.19.2"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bindapi = 'bind_rest_api.cli:main'

[tool.semantic_release]
version_variable = [
    "bind_rest_api/api/constants.py:__version__",
    "pyproject.toml:version"
    ]
